--- a/daka-frontend/package.json
+++ b/daka-frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
+    "@mui/styles": "^5.15.5",
     "@reduxjs/toolkit": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
